test/syntax/valid/01_minimal.sg
// Single statement — the smallest possible program.
import io

io.print("hello")
