test/syntax/errors/08_extra_paren.sg
// expect-error: parse error
// Extra closing parenthesis after a valid call.
import io

io.print("hello"))
